Linked pages and added basic styles

--- a/compass.html
+++ b/compass.html
@@ -33,5 +33,7 @@
         <li>Talk to Lulu about her Norway plan and learn more</li>
         <li>Prepare mentally and financially to leave</li>
     </ul>
+    
+    <a href="routine.html" class="button">Go to Routine</a>
 </body>
 </html>
