--- a/routine.html
+++ b/routine.html
@@ -19,5 +19,11 @@
             <li><strong>22:00</strong> - Sleep</li>
         </ul>
     </div>
+    <a href="compass.html" class="button">Back to Compass</a>
+
+    <h2>How to update the depository by VS terminal</h2>
+    <p>git add .</p>
+    <p>git commit -m "My comentary"</p>
+    <p>git push</p>
 </body>
 </html>
